Both normal and PKI versions of KPA now learn identically. Note that testTime was added to see how much faster PKI is, but it appears that PKI is actually slower than normal KPA for non-sparse support vectors, since PKI must go through the work of finding all matching support vectors, which is O(number of support vectors) for a completely full match.